<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Quiz"
    android:background="@drawable/gradasi"
    >
    <RelativeLayout
        android:layout_width="4600dp"
        android:layout_height="4200dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

        <RelativeLayout
            android:id="@+id/RL1"
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_quiz"

            >

            <TextView
                android:id="@+id/questionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="8dp"
                android:text="?"
                android:textColor="#000000"
                android:textSize="15dp" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RL2"
        android:layout_below="@id/RL1"
        >

        <Button
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text=""

            android:textColor="#000000" />

        <Button

            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/choice1"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:text=""
            android:textColor="#000000" />

        <Button
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/choice2"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:text=""
            android:textColor="#000000" />
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>