<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradasi"
    >

    <RelativeLayout
        android:id="@+id/RLtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/rounded_background"

        >

        <TextView
            android:id="@+id/Tvkamu"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="Seberapa Korupsi si kamu?"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="20dp"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RLb"
        android:layout_below="@+id/RLtv"
        android:layout_centerInParent="true"
        >

        <Button
            android:id="@+id/btnNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/next"
            android:textSize="12dp" />
    </RelativeLayout>
</RelativeLayout>